# ntfd

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
examples/json_payload/: README.md  post-payload.sh
examples/json_payload/conf/json_payload/: log.txt
examples/payload/: post-payload.sh
examples/payload/conf/default/: run
examples/you_suffer/: README.md  you_suffer.sh
examples/you_suffer/default/: run
src/: main.rs
src/cli/: mod.rs
src/environment/: mod.rs
src/handler/: mod.rs
src/process/: mod.rs
src/server/: mod.rs
