[package]
name = "ntfd"
version = "0.1.0"
authors = ["Yury Antonov <1390348+yantonov@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.11.1"
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.11.1"
tokio = { version = "1.49.0", features = ["full"] }
warp = "0.3.7"
